# SpectraStruct

./: .gitignore  CLAUDE.md  README.md  package-lock.json  pyproject.toml  run_demo.sh
.claude/: settings.local.json
backend/: main.py
configs/: data.yaml  model.yaml  train.yaml
data/fixtures/: acetaminophen.json  acetone.json  aspirin.json  benzene.json  caffeine.json  capsaicin.json  cholesterol.json  citric_acid.json  dopamine.json  ethanol.json  glucose.json  ibuprofen.json  lidocaine.json  menthol.json  nicotine.json  penicillin_g.json  quinine.json  serotonin.json  toluene.json  vanillin.json
data/fixtures/spectra/: acetaminophen_ms.csv  acetaminophen_nmr.csv  acetone_ms.csv  acetone_nmr.csv  aspirin_ms.csv  aspirin_nmr.csv  benzene_ms.csv  benzene_nmr.csv  caffeine_ms.csv  caffeine_nmr.csv  capsaicin_ms.csv  capsaicin_nmr.csv  cholesterol_ms.csv  cholesterol_nmr.csv  citric_acid_ms.csv  citric_acid_nmr.csv  dopamine_ms.csv  dopamine_nmr.csv  ethanol_ms.csv  ethanol_nmr.csv  glucose_ms.csv  glucose_nmr.csv  ibuprofen_ms.csv  ibuprofen_nmr.csv  lidocaine_ms.csv  lidocaine_nmr.csv  menthol_ms.csv  menthol_nmr.csv  nicotine_ms.csv  nicotine_nmr.csv  penicillin_g_ms.csv  penicillin_g_nmr.csv  quinine_ms.csv  quinine_nmr.csv  serotonin_ms.csv  serotonin_nmr.csv  (+4 more)
data/raw/: manifest.json
frontend/: README.md  package-lock.json
frontend/src/: App.jsx  index.css
scripts/: build_fixtures.py  fetch_demo_data.py
src/chemistry/: rdkit_utils.py  selfies_utils.py
src/data/: binning.py  datasets.py  schema.py
tests/: test_binning.py  test_rdkit_utils.py
(+3 files in other folders)
